--- a/pyproject.toml
+++ b/pyproject.toml
@@ -157,7 +157,7 @@ build-backend = "setuptools.build_meta"
 [tool.versioneer]
 VCS = "git"
 style = "pep440"
-versionfile_source = "src/sample_package/_version.py"
-versionfile_build = "sample_package/_version.py"
+versionfile_source = "src/actinet/_version.py"
+versionfile_build = "actinet/_version.py"
 tag_prefix = "v"
-parentdir_prefix = "sample-package-"
+parentdir_prefix = "actinet-"
