Add completed notebooks to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,11 @@
 .cache/
 .vscode/
 
+# Completed notebooks #
+#######################
+EvaluateModel.ipynb
+TrainModel.ipynb
+
 # Compiled source #
 ###################
 *.a
